--- a/web/form.xhtml
+++ b/web/form.xhtml
@@ -16,13 +16,20 @@
             <h:inputTextarea cols="20" rows="10" value="#{adminBooksBean.book.description}"/>
         </div>
         <div>
-            <h:outputLabel>Number of pages </h:outputLabel>
+            <h:outputLabel>Number of pages</h:outputLabel>
             <h:inputText value="#{adminBooksBean.book.numberOfPages}"/>
         </div>
         <div>
             <h:outputLabel>Price </h:outputLabel>
             <h:inputText value="#{adminBooksBean.book.price}"/>
         </div>
+        <div>
+            <h:outputLabel>Autores</h:outputLabel>
+            <h:selectManyListbox value="#{adminBooksBean.selectedAuthorsIds}" converter="javax.faces.Integer">
+                <f:selectItems value="#{adminBooksBean.authors}" var="author" itemLabel="#{author.name}" itemValue="#{author.id}"/>
+            </h:selectManyListbox>
+        </div>
+
         <h:commandButton value="Write" action="#{adminBooksBean.save}"/>
     </h:form>
 </h:body>
